2008-08-31 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/mp3file.c: Handle Artist and AlbumArtist fields differently:
	  For Artist: try the Artist tag and fall back to the Album Artist
	  tag if the former does not exist.
	  For Album Artist: set to the contents of the Album Artist tag,
	  but only if the Artist tag does exist.
	  Thanks to Dudy Kohen for the patch.

	* src/mp4file.c: do the same for mp4 files (the Album Artist tag
	  was not supported before).

2008-08-04 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file_itunesdb.c (read_extended_info): fixed valgrind
	  warning. Thanks to Andrea.

	* src/repository.c (sync_playlist_mode_automatic_toggled): fixed
	  memory leak. Thanks to Andrea.

	  (repwin_free): fixed memory leak. Thanks to Andrea.

	* src/mp3file.c (mp3_read_lame_tag, mp3_get_track_gapless,
	  mp3_get_track_lame_replaygain, set_uncommon_tag): fixed possible
	  compiler warnings.

	  (mp3_read_lame_tag, mp3_read_gapless): fixed memory
	  leaks. Thanks to Andrea.

	* src/mp3file.[ch]: Added "const" qualifier to filename arguments.

	* src/file.c (add_coverart): fixed memory leak. Thanks to Andrea.

	* src/details.c (details_get_item): fixed memory leak. Thanks to
	  Andrea.

	* src/prefs.c (get_list_from_buffer): fixed memory leaks.

	* src/prefsdlg.c (on_unsetdeps_checkbox_toggled): fixed memory
	  leak.

	* src/prefsdlg.c (on_commands_clicked, on_cmd_aacgain_file_set):
	  variable for aacgain was defined as "aacgain_path" instead of
	  "path_aacgain".

	* src/prefsdlg.c
	  data/gtkpod.glade:
	  Fix usability problems in prefs dialog (Music->Commands).

	* src/file_convert.c
	  data/gtkpod.glade:
	  The widget name "conversion_log" was used twice, but for some
	  reason this didn't cause problems until glade-3 re-wrote the
	  file. Fixed by using different name for the menu item.

2008-08-16 Paul Richardson <phantom_sf at users.sourceforge.net>

	* src/display.c: memory leak fix in display_image_dialog. Thanks to