@@ -1,3 +1,10 @@
+2008-09-07 Jorg Schuler <jcsjcs at users.sourceforge.net>
+
+	* configure.in
+	  src/mp4file.c: Check whether MP4 AlbumArtist functions are
+	  available (fixes compilation error with older versions of
+	  libmp4v2).
+
 2008-08-31 Jorg Schuler <jcsjcs at users.sourceforge.net>
 
 	* src/mp3file.c: Handle Artist and AlbumArtist fields differently:
